# mcp-server-office

./: LICENSE  README.md  office.py  pyproject.toml
mcp_server_office/: office.py  tools.py
tests/: test_office.py
